--- a/sweet.html
+++ b/sweet.html
@@ -304,6 +304,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/gfdfpeachpie" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/gfdfpeachpie.jpeg" class="w-100" alt="GF/DF Peach Pie">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/gfdfpeachpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Peach Pie</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
       </div>
     </section>
