--- a/gfdf.html
+++ b/gfdf.html
@@ -191,10 +191,10 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/gfdfpumpkinbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdfpumpkinbread.jpg" class="w-100" alt="GF/DF Pumpkin Bread">
+              <img src="assets/images/food/gfdfpumpkinbread.jpg" class="w-100" alt="Pumpkin Bread">
             </a>
             <figcaption class="mt-2">
-              <a href="/gfdfpumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Pumpkin Bread</a>
+              <a href="/gfdfpumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
             </figcaption>
           </figure>
         </div>
@@ -203,10 +203,10 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/gfdfpeachpie" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdfpeachpie.jpeg" class="w-100" alt="GF/DF Peach Pie">
+              <img src="assets/images/food/gfdfpeachpie.jpeg" class="w-100" alt="Peach Pie">
             </a>
             <figcaption class="mt-2">
-              <a href="/gfdfpeachpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Peach Pie</a>
+              <a href="/gfdfpeachpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Peach Pie</a>
             </figcaption>
           </figure>
         </div>
