--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             </div>
           </div>
         </div>
-        <p class="big pe-0 pe-md-5 pb-3 pb-sm-5 pb-lg-0">Hi! Welcome to my digital cookbook, which I regularly update with my favorite gluten free & dairy free recipes. Hope you enjoy.</p>
+        <p class="big pe-0 pe-md-5 pb-3 pb-sm-5 pb-lg-0">Hi! Welcome to my digital cookbook, which I regularly update with my favorite gluten free & dairy free recipes.</p>
         <div class="tstbite-social my-4 my-md-0">
           <a href="https://www.instagram.com/nyctreats/">
             <svg data-name="feather-icon/instagram" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
