--- a/gfdfbiscuits.html
+++ b/gfdfbiscuits.html
@@ -115,7 +115,7 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">GF/DF Biscuits</h5>
+          <h5 class="py-3 mb-0 h2">Biscuits</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
