--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               <img src="assets/images/food/chocolateavocadocookies.jpg" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/chocolateavocadocookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
+              <a href="/chocolateavocadocookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies <img src="assets/images/icons/gf.png" style="width:20px; height:20px"></a>
             </figcaption>
           </figure>
         </div>
@@ -287,7 +287,7 @@
               <img src="assets/images/food/biscuits.jpg" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/gfdfbiscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
+              <a href="/gfdfbiscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits <img src="assets/images/icons/gf.png" style="width:20px; height:20px"></a>
             </figcaption>
           </figure>
         </div>
@@ -299,7 +299,7 @@
               <img src="assets/images/food/meatballs.jpg" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/meatballs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meatballs</a>
+              <a href="/meatballs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meatballs <img src="assets/images/icons/gf.png" style="width:20px; height:20px"></a>
             </figcaption>
           </figure>
         </div>
@@ -309,7 +309,7 @@
               <img src="assets/images/food/pumpkinloaf.png" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/gfdfpumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
+              <a href="/gfdfpumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread <img src="assets/images/icons/gf.png" style="width:20px; height:20px"></a>
             </figcaption>
           </figure>
         </div>
@@ -319,7 +319,7 @@
               <img src="assets/images/food/brownies.png" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
+              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies <img src="assets/images/icons/gf.png" style="width:20px; height:20px"></a>
             </figcaption>
           </figure>
         </div>
