--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@
 
   <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
     <div class="container">
+      <span style="font-family:MADEVoyagerThin">GLUTEN FREE <img src="assets/images/icons/gf.png" style="width:20px; height:20px"></span> <span style="font-family:MADEVoyagerThin">DAIRY FREE <img src="assets/images/icons/df.png" style="width:20px; height:20px"></span> <span style="font-family:MADEVoyagerThin">VEGAN <img src="assets/images/icons/v.png" style="width:20px; height:20px"></span> <span style="font-family:MADEVoyagerThin">EGG FREE <img src="assets/images/icons/ef.png" style="width:20px; height:20px"></span>
     </div>
   </footer>
 </section>
