--- a/breads.html
+++ b/breads.html
@@ -127,7 +127,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/gfdfbiscuits" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdfbiscuits.png" class="w-100" alt="GF/DF Biscuits">
+              <img src="assets/images/food/biscuits.jpg" class="w-100" alt="GF/DF Biscuits">
             </a>
             <figcaption class="mt-2">
               <a href="/gfdfbiscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
