--- a/entrees.html
+++ b/entrees.html
@@ -220,6 +220,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/lettucecups" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/lettucecups.jpg" class="w-100" alt="Lettuce Cups">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/lettucecups" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Teriyaki Lettuce Cups</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </div>
     </section>
