--- a/gfdfpumpkinbread.html
+++ b/gfdfpumpkinbread.html
@@ -116,6 +116,7 @@
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
           <h5 class="py-3 mb-0 h2">Pumpkin Bread</h5>
+          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:25px; height:25px"></div>
         </div>
       </div>
       <div class="d-flex flex-wrap">
