--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/brownies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdfbrownies.jpg" class="w-100">
+              <img src="assets/images/food/brownies.png" class="w-100">
             </a>
             <figcaption class="mt-2">
               <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
