--- a/biscuits.html
+++ b/biscuits.html
@@ -132,7 +132,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/biscuits.jpg" class="w-100" >
+          <img src="assets/images/food/gfdfbiscuits.png" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
