--- a/cakesandpies.html
+++ b/cakesandpies.html
@@ -102,7 +102,7 @@
       </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Cakes/Pies</h5>
+      <h5 class="py-3 mb-0">Cakes & Pies</h5>
         <div class="row">
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
