--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                 </svg>
               </a>
               <div class="dropdown-menu" aria-labelledby="Pages">
-                <a class="dropdown-item" href="/bars">Bars</a>
-                <a class="dropdown-item" href="/breads">Breads & Muffins</a>
-                <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
-                <a class="dropdown-item" href="/cookies">Cookies</a>
-                <a class="dropdown-item" href="/entrees">Entrees</a>
+                <a class="f-size-20 text-black d-block mt-1 font-weight-bold" href="/bars">Bars</a>
+                <a class="f-size-20 text-black d-block mt-1 font-weight-bold" href="/breads">Breads & Muffins</a>
+                <a class="f-size-20 text-black d-block mt-1 font-weight-bold" href="/cakesandpies">Cakes & Pies</a>
+                <a class="f-size-20 text-black d-block mt-1 font-weight-bold" href="/cookies">Cookies</a>
+                <a class="f-size-20 text-black d-block mt-1 font-weight-bold" href="/entrees">Entrees</a>
                 <a class="dropdown-item" href="/other">Other</a>
               </div>
             </li>
